# wgpu-experiments

./: .gitignore  Cargo.toml  README.md  flake.nix
renderer/: Cargo.toml
renderer/assets/: shader.wgsl
renderer/src/: camera.rs  lib.rs  pipelines.rs  textures.rs  vertices.rs
src/: main.rs
www/: index.html  package-lock.json  package.json
www/src/: main.ts
